--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-* {
-  padding: 0;
-  margin: 0;
+@layer base {
+  :root {
+    --radius: 0.5rem
+  }
 }
